[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://GDSerialExample.gd" type="Script" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 3 )

[node name="Open" type="Button" parent="."]
anchor_right = 0.171
anchor_bottom = 0.14
margin_left = 172.0
margin_top = 84.3326
margin_right = 160.896
margin_bottom = 20.3326
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Open"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Open"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
anchor_right = 0.171
anchor_bottom = 0.14
margin_left = 173.335
margin_top = 126.38
margin_right = 162.231
margin_bottom = 62.38
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Close"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Close"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Write" type="Button" parent="."]
anchor_right = 0.171
anchor_bottom = 0.14
margin_left = 173.335
margin_top = 170.43
margin_right = 162.231
margin_bottom = 106.43
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Write"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Write"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Read" type="Button" parent="."]
anchor_right = 0.171
anchor_bottom = 0.14
margin_left = 174.67
margin_top = 208.473
margin_right = 163.566
margin_bottom = 144.473
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Read"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Read"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Open" to="Sprite" method="_on_Button_pressed"]
[connection signal="pressed" from="Close" to="Sprite" method="_on_Close_pressed"]
[connection signal="pressed" from="Write" to="Sprite" method="_on_Write_pressed"]
